fixed expand option on small screens

--- a/public/tailwind.css
+++ b/public/tailwind.css
@@ -642,6 +642,46 @@ video {
   top: 0.5rem;
 }
 
+.-bottom-1 {
+  bottom: -0.25rem;
+}
+
+.bottom-1 {
+  bottom: 0.25rem;
+}
+
+.bottom-2 {
+  bottom: 0.5rem;
+}
+
+.bottom-5 {
+  bottom: 1.25rem;
+}
+
+.right-5 {
+  right: 1.25rem;
+}
+
+.right-4 {
+  right: 1rem;
+}
+
+.right-1 {
+  right: 0.25rem;
+}
+
+.right-0 {
+  right: 0px;
+}
+
+.bottom-6 {
+  bottom: 1.5rem;
+}
+
+.bottom-8 {
+  bottom: 2rem;
+}
+
 .z-50 {
   z-index: 50;
 }
@@ -672,6 +712,18 @@ video {
 
 .row-end-7 {
   grid-row-end: 7;
+}
+
+.row-end-12 {
+  grid-row-end: 12;
+}
+
+.row-end-10 {
+  grid-row-end: 10;
+}
+
+.row-end-11 {
+  grid-row-end: 11;
 }
 
 .mb-2 {
@@ -764,6 +816,26 @@ video {
 
 .h-8 {
   height: 2rem;
+}
+
+.h-5 {
+  height: 1.25rem;
+}
+
+.h-2\/3 {
+  height: 66.666667%;
+}
+
+.h-\[2\/12\] {
+  height: 2/12;
+}
+
+.h-\[4\/12\] {
+  height: 4/12;
+}
+
+.h-\[8\/12\] {
+  height: 8/12;
 }
 
 .max-h-10 {
